--- a/css/style.css
+++ b/css/style.css
@@ -31,24 +31,23 @@ body {
 
 }
 
-.container {
-    width: 100%;
-    max-width: 1280px;
-    padding: 1rem;
-    margin-inline: auto;
-}
+
 
 .card-wrapper {
     width: 100%;
-    max-width: 375px;
-    padding: 1rem;
-    margin-inline: auto;
+    height: calc(100vh - 14px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-item {
+    width: 100%;
+    max-width: 300px;
+    padding: 1rem;
+    margin-inline: auto;
     background-color: var(--white);
     border-radius: 24px;
-    padding: 1rem;
 }
 
 .card-item .card-img {
